--- a/values.yml
+++ b/values.yml
@@ -1,3 +1,3 @@
 myRepo:
-  gitProvider: manishas_jfrog_github
-  path: manishas-jfrog/jfrog-pipelines-npm-sample
+  gitProvider: marcus_github
+  path: ml-jfrog/jfrog-pipelines-npm-sample
